--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FontAwesome6Pro</title>
-    <script>
+    <!-- <script>
         window.location = "/css/all.min.css";
-    </script>
+    </script> -->
 </head>
 <body>
+    <h1>FontAwesome6Pro</h1>
 </body>
 </html>
